cpp/nux/nux.h

typedef struct Nux Nux;
/**
 * \brief Return a version of Nux native library
 */
const char *version(void);
/**
 * \brief Return a short Git hash of Nux native library
 */
const char *git_short_hash(void);
/**
 * \brief Return a build timestamp of Nux native library
 */
const char *build_timestamp(void);
/**
 * \brief Enable a logger.
 */
void enable_logging(void);
/**
 * \brief Register Ctrl-C signal handler to exit process.
 */
void register_signal_handler(void);
/**
 * \brief Specify a pointer to a data buffer to a specified input tensor.
 *
 * This function is almost same to #tensor_fill_buffer.
 * However, `tensor` takes the ownership of the buffer with `free` function
 * to deallocate the buffer. Ensure that nothing else uses the pointer after calling this function.
 *
 * if `free` is `null`, `tensor` will not deallocate the buffer.
 * It can be useful when you want to reuse the buffer or buffer is on a stack area of a function.
 * Please ensure that the buffer must be deallocated manually by users
 * in order to prevent the memory leak.
 *
 * @param tensor Tensor handle into which you want to copy input data
 * @param buffer Pointer to the data buffer
 * @param len Byte length of `buffer`
 * @param free a function pointer to deallocate a buffer. If `free` is `null`,
 * `tensor` will not deallocate the data.
 * @return nux_error_t_success if successful,
 * or nux_error_t_invalid_buffer if `buffer` is invalid.
 */
enum nux_error_t tensor_set_buffer(nux_tensor_t tensor,
                                   nux_buffer_t buffer,
                                   nux_buffer_len_t len,
                                   void (*free)(uint8_t*, uintptr_t));